<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FatturatoFragment">
    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="422dp"
        android:layout_height="178dp"
        android:scaleType="centerCrop"
        android:src="@drawable/healthcare_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="422dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/healthcare_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="588dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFatturato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fatturato"
            android:textAlignment="center"
            android:textColor="@color/text_color_highlight"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.301"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TableLayout
            android:id="@+id/tableLayout3"
            android:layout_width="409dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFatturato">

            <TableRow
                android:id="@+id/trParametroDaValutareFatturato"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvParametroDaValutareFatturato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valutare" />

                <RadioButton
                    android:id="@+id/rbPrenotazioniEseguiteFatturato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/positivo" />

                <RadioButton
                    android:id="@+id/rbPrestazioniNonFruiteFatturato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negativo" />
            </TableRow>

            <TableRow
                android:id="@+id/trPeriodo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tvPeriodoFatturato"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/periodo" />

                <TextView
                    android:id="@+id/tvDataInizioFatturato"
                    android:layout_width="114dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/da"
                    android:importantForAutofill="no"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/tvDataFineFatturato"
                    android:layout_width="114dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/a"
                    android:importantForAutofill="no"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <Spinner
                    android:id="@+id/spinnerMensileAnnualeFatturato"
                    android:layout_width="107dp"
                    android:layout_height="52dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:id="@+id/trEsecuzioneFatturato"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btEseguiFatturato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/TRANSPARENT"
                    android:text="@string/esegui"
                    android:textColor="@color/background" />
            </TableRow>
        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDatiFatturato"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swCambiaVisualizzazione2" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/istoAndamentoFatturato"
            android:layout_width="410dp"
            android:layout_height="382dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".78"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swCambiaVisualizzazione2">

        </com.github.mikephil.charting.charts.BarChart>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swCambiaVisualizzazione2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="267dp"
            android:layout_marginEnd="1dp"
            android:enabled="false"
            android:minHeight="48dp"
            android:text="@string/passa_a_grafico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>