<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background_dialog">

    <EditText
        android:id="@+id/etVecchiaPassword"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/vecchia_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etNuovaPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etNuovaPassword"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/nuova_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etConfermaPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVecchiaPassword"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etConfermaPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/conferma_nuova_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNuovaPassword"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>