<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AccessoFragment">
    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="422dp"
        android:layout_height="178dp"
        android:scaleType="centerCrop"
        android:src="@drawable/healthcare_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAccesso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <EditText
            android:id="@+id/etCodiceFiscale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/codice_fiscale"
            android:importantForAutofill="no"
            android:inputType="textCapCharacters"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck,DuplicateClickableBoundsCheck,DuplicateClickableBoundsCheck" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="138dp"
            android:background="@drawable/et_bg"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btAccediPaziente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCodiceFiscale"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAccediPaziente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="@string/accedi"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".7"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvAccediCurrent"
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:layout_marginTop="26dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/accedi"
            android:textAllCaps="true"
            android:textColor="@color/background"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btRegistrati"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btRegistrati"
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:layout_marginStart="103dp"
            android:background="@color/TRANSPARENT"
            android:text="@string/registrati"
            app:layout_constraintBottom_toBottomOf="@+id/tvAccediCurrent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAccediCurrent"
            app:layout_constraintTop_toTopOf="@+id/tvAccediCurrent" />

        <Button
            android:id="@+id/btOpzioneAmmnistrativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="91dp"
            android:background="@color/TRANSPARENT"
            android:text="@string/amministrativoOpzione"
            android:textColor="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btAccediPaziente" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>